--- a/homepage/templates/homepage/create.html
+++ b/homepage/templates/homepage/create.html
@@ -1,1 +1,35 @@
-create.html
+{% extends 'homepage/base.html' %}
+{% load crispy_forms_tags %}
+{% block content %}
+<style type="text/css">
+  html {
+    background-color: white;
+  }
+</style>
+  <a href="/" class='btn btn-outline-secondary pull-left'> 
+    Back 
+  </a> 
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="text-center">
+          <h1 class="mt-5">Create your own HiLo!</h1>
+          <p class="lead">Create a HiLo for your area, and get your own customized page!</p>
+        </div>
+        <form method="post" enctype="multipart/form-data">
+          {% csrf_token %}
+          <fieldset class="form-group">
+            <legend class="border-bottom mb-4"> The new location </legend>
+            {{ locationForm|crispy}}
+            <br><br>
+            <legend class="border-bottom mb-4"> What questions would you like to ask? </legend>
+            {{ pollForm|crispy }}
+          </fieldset>
+          <div class="form-group">
+            <button type="submit" class="btn btn-outline-info">Submit</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+{% endblock %}
